feat: 임시 저장된 지원서 삭제 기능 개선 및 요구사항 적용 (#479)
* feat: 지원서 상세 조회 응답 구조 및 개

* fix: 지원서 상세 정보 응답 flatten 처

* feat: 관리자 지원서 관리 API 리팩토링 및 서비스 개선

불필요한 메서드를 제거하여 코드의 간결성을 제고했습니다.

* test: applyId 검증 로직 수정

getFirst() 메서드를 사용하여 첫 번째 요소를 명확하게 가져오도록 변경했습니다.

* chore: TestContainers 버전 업데이트

TestContainers의 BOM 버전을 1.20.4에서 2.0.2로 업데이트했습니다.
이 변경은 최신 기능과 버그 수정을 반영하여 테스트 환경을 개선하기 위함입니다.

* feat: 지원서 상세 조회 응답 구조 및 개선

* fix: 지원서 상세 정보 응답 flatten 처리

* feat: 관리자 지원서 관리 API 리팩토링 및 서비스 개선

불필요한 메서드를 제거하여 코드의 간결성을 제고했습니다.

* test: applyId 검증 로직 수정

getFirst() 메서드를 사용하여 첫 번째 요소를 명확하게 가져오도록 변경했습니다.

* chore: TestContainers 버전 업데이트

TestContainers의 BOM 버전을 1.20.4에서 2.0.2로 업데이트했습니다.
이 변경은 최신 기능과 버그 수정을 반영하여 테스트 환경을 개선하기 위함입니다.

* refactor: 지원서 삭제 로직 개선 및 소프트 삭제 추가

지원서 삭제 API의 로직을 리팩토링하여, 제출된 지원서를
삭제할 때 reject 및 프로필 삭제 대신 소프트 삭제를
적용하도록 변경했습니다. 이를 통해 데이터 무결성을
유지하면서도 삭제된 지원서를 관리할 수 있게 되었습니다.

추가로, 데이터베이스에 soft delete를 위한 is_deleted
컬럼을 추가했습니다.

* chore: TestContainers 버전 원상 복구

* refactor: AdminApplyService에서 쿼리 리포지토리 변경

AdminApplyService에서 AdminApplyQueryRepository를 AdminApplyRepository로 변경하였습니다.
이 변경은 코드의 일관성을 높이고, 리포지토리 사용을 단순화하기 위한 것입니다.
또한, 테스트 코드에서 delete 메서드를 deleteAll로 변경하여
여러 개의 지원서를 한 번에 삭제할 수 있도록 개선하였습니다.

* refactor(test): AdminApplyQueryRepositoryTest에서 쿼리 리포지토리 변경

AdminApplyQueryRepository를 AdminApplyRepository로 변경하여
테스트 코드의 일관성을 높였습니다. 이 변경은 기능에 영향을
주지 않으며, 코드 가독성을 개선합니다.

* style: AdminApplyDetailResponse.java 파일의 끝에 개행 추가

파일의 끝에 개행이 없던 문제를 수정하여 코드 스타일을 개선했습니다.
이로 인해 코드의 가독성이 향상되고, 일부 도구와의 호환성 문제가 해결됩니다.

* feat: 임시 저장된 지원서 삭제 기능 제거

임시 저장 상태의 지원서를 단건 삭제하는 기능에 대한
테스트를 추가했습니다. 이 테스트는 지원서가
정상적으로 삭제되는지 검증하며, 삭제 요청 시
해당 지원서를 찾고 삭제하는 로직을 확인합니다.